# MP

./: CMakeLists.txt  TODOMEMORY  carriers.txt  categories.txt  clientes.txt  compile.sh  main  main.c  orders.txt  productorders.txt
databases/: adminprov.txt  carriers.txt  categories.txt  clientes.txt  discounts.txt  orders.txt  productorders.txt  products.txt  refunds.txt
libs/: controller.c  controller.h  dataTypes.h  fileHandler.c  fileHandler.h
libs/Admin/: admin.c  admin.h
libs/AdminProvider/: adminProvider.c  adminProvider.h
libs/Carrier/: carrier.c  carrier.h
libs/Client/: client.c  client.h
libs/Product/: product.c  product.h
libs/Provider/: adminProvider.c  provider.c  provider.h
libs/Utils/: debug.c  debug.h  utils.c  utils.h
